--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Neela - An intuitive chatbot</title>
+    <title>Voxel - An intuitive chatbot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -10,13 +10,16 @@
   <body>
     <div id="header_wrapper">
       <div id="header">
-        <div id="title">Neela</div>
+        <div id="title">Voxel</div>
         A School Management System With An Intuitive Chat Bot
         <br>
         <br>
 
         <section style="font-size: 3vh;" onclick="location.replace('/')"">Chatbot</section>
-        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Add students</section>
+        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Students</section>
+        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Teachers</section>
+        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Assignments</section>
+        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Schedules</section>
 
       </div>
     </div>
@@ -24,7 +27,7 @@
     <div id="chat_box">
       <div id="chat">
         <div class="message_box">
-          <div class="name" id="bg">Neela</div>
+          <div class="name" id="bg">Voxel</div>
           <div class="content">Hello there</div>
       </div>
       </div>
@@ -171,10 +174,10 @@
             });
 
             const data = await response.json();
-            addMessage('Neela',data['response'],"start")
+            addMessage('Voxel',data['response'],"start")
   }
 
-  addMessage('Neela',"I'm a school assistant bot! I can:<br> 1. **Show information**: I can display information about students, such as their name, class, stream, and house. <br> 2. **Add students**: I can add new students to my memory by providing their name, class, stream, and house.<br> 3. **Sort students**: I can sort students based on various filters, such as class, stream, or house.<br> 4. **Solve homework questions**: I can help solve various homework questions, but please note that my problem-solving abilities are limited to the topics and data I have been trained on.<br> 5. **Take input from students**: You can input a student's name, and I can display their information. <br> 6. **Manage class teachers** I can add teachers and also assign class teachers to a class","start")
+  addMessage('Voxel',"I'm a school assistant bot! I can:<br> 1. **Show information**: I can display information about students, such as their name, class, stream, and house. <br> 2. **Add students**: I can add new students to my memory by providing their name, class, stream, and house.<br> 3. **Sort students**: I can sort students based on various filters, such as class, stream, or house.<br> 4. **Solve homework questions**: I can help solve various homework questions, but please note that my problem-solving abilities are limited to the topics and data I have been trained on.<br> 5. **Take input from students**: You can input a student's name, and I can display their information. <br> 6. **Manage class teachers** I can add teachers and also assign class teachers to a class","start")
 
 
 
