added sql compat

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-  
   </head>
 
   <body>
@@ -15,25 +14,29 @@
         <br>
         <br>
 
-        <section style="font-size: 3vh;" onclick="location.replace('/')"">Chatbot</section>
-        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Students</section>
-        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Teachers</section>
-        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Assignments</section>
-        <section style="font-size: 3vh;" onclick="location.replace('/student')"">Schedules</section>
+        <nav>
+          <ul>
+            <li><a href="/" style="font-size: 3vh;">Chatbot</a></li>
+            <li><a href="/student" style="font-size: 3vh;">Students</a></li>
+            <li><a href="/teacher" style="font-size: 3vh;">Teachers</a></li>
+            <li><a href="/assgn" style="font-size: 3vh;">Assignments</a></li>
+            <li><a href="/schedule" style="font-size: 3vh;">Schedules</a></li>
+          </ul>
+        </nav>
 
       </div>
     </div>
-<br>
+    <br>
     <div id="chat_box">
       <div id="chat">
         <div class="message_box">
           <div class="name" id="bg">Voxel</div>
           <div class="content">Hello there</div>
-      </div>
+        </div>
       </div>
       <div id="prompt">
-          <input type="text" id="inp">
-          <button id="but" onclick="submit()">Send</button>
+        <input type="text" id="inp" placeholder="Type a message...">
+        <button id="but" onclick="submit()">Send</button>
       </div>
     </div>
   </body>
@@ -85,6 +88,7 @@
     width: 70vw;
     min-height: 60vh;
     margin: 10px;
+    overflow-y: auto;
   }
 
   body {
@@ -127,26 +131,41 @@
   }
 
   .message_box{
-        background-color: black;
-        color: white;
-        padding: 10px;
-        margin-block: 20px;
-    }
+    background-color: black;
+    color: white;
+    padding: 10px;
+    margin-block: 20px;
+  }
 
-    .name{
-        font-weight: 800;
-    }
+  .name{
+    font-weight: 800;
+  }
 
-    .content{
-        font-weight: 300;
-        margin-block: 5px;
-    }
+  .content{
+    font-weight: 300;
+    margin-block: 5px;
+  }
 
-    section:hover{
-        color: rebeccapurple;
-        text-decoration: underline;
-    }
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  nav ul>li{
+    margin-inline: 10px;
+  }
 
+  nav a {
+    color: white;
+    text-decoration: none;
+  }
+
+  nav a:hover {
+    color: rebeccapurple;
+    text-decoration: underline;
+  }
 </style>
 
 <script>
@@ -156,7 +175,7 @@
           <div class="content">${content}</div>
             </div>`
     document.getElementById("chat").innerHTML+=html
-    
+    document.getElementById("chat").scrollTop = document.getElementById("chat").scrollHeight;
   }
 
   async function submit() {
@@ -178,7 +197,4 @@
   }
 
   addMessage('Voxel',"I'm a school assistant bot! I can:<br> 1. **Show information**: I can display information about students, such as their name, class, stream, and house. <br> 2. **Add students**: I can add new students to my memory by providing their name, class, stream, and house.<br> 3. **Sort students**: I can sort students based on various filters, such as class, stream, or house.<br> 4. **Solve homework questions**: I can help solve various homework questions, but please note that my problem-solving abilities are limited to the topics and data I have been trained on.<br> 5. **Take input from students**: You can input a student's name, and I can display their information. <br> 6. **Manage class teachers** I can add teachers and also assign class teachers to a class","start")
-
-
-
 </script>
