--- a/templates/student.html
+++ b/templates/student.html
@@ -27,9 +27,10 @@
               border-collapse: collapse;
           }
           th, td {
-              padding: 10px;
+              padding: 6px;
               text-align: left;
               border-bottom: 1px solid white;
+              text-align: center;
           }
           th {
               background-color: rgba(255, 255, 255, 0.066);
@@ -120,10 +121,11 @@
                       <td>${student[0]}</td>
                       <td>${student[1]}</td>
                       <td>${student[2]}</td>
-                      <td>${student[3]}</td>
-                      <td>${student[4]}</td>
+                      <td>${student[3].substring(0,student[3].length-13)}</td>
+                      <td>${student[4].substring(0,student[3].length-13)}</td>
                       <td> <button onclick="editStudent(${student[0]})">Edit</button>
                           <button onclick="deleteStudent(${student[0]})">Delete</button>
+                          <button onclick="location.href='/profile/${student[0]}'">Profile</button>
                   </td>
                   `;
                   tbody.appendChild(row);
