--- a/templates/profile.html
+++ b/templates/profile.html
@@ -242,6 +242,9 @@
         fetchStudentProfile('{{roll}}');
         fetchStudentMarks('{{roll}}');
     </script>
+            <footer>
+                <p style="text-align: center;">© ( 2024 Vignesh R | 6095 | 2K2K- CRUZ). All rights reserved.</p>
+            </footer>
 </body>
 
 </html>
